--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+  <title>
+    Peter Kitlas
+  </title>
+ 
+  <body>
+    <h1>Ph.D. Candidate Near Eastern Studies, Princeton University</h1>
+  </body>
+  
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      text-align:center
+    }
+  </style>
+  
+</html>
