--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
-<body>
-<h1>Peter Kitlas</h1>
-</body>
-
+	<head>
+		<title>Peter Kitlas</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1>Hi there, I'm Pete Kitlas!</h1>
+				<p>P.H.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my studies...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:pkitlas@me.com">email</a></li>
+      
+			</ul>
+		</footer>
+	</body>
 </html>
