--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
+	        	<li><a href="/research">Research</a></li>
         		<li><a href="/cv">CV</a></li>
+			<li><a href="/teaching">Teaching</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Pete Kitlas!</h1>
-				<p>P.H.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my studies...</a></p>
+				<p>P.h.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my studies here...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
