--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Pete Kitlas!</h1>
-				<p>P.h.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my studies here...</a></p>
+        		<h1>Peter Kitlas!</h1>
+				<p>P.h.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my research here...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
