--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Peter Kitlas</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/research">Research</a></li>
-        		<li><a href="/cv">CV</a></li>
-			<li><a href="/teaching">Teaching</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Peter Kitlas!</h1>
-				<p>P.h.D Candidate, Near Eastern Studies, Princeton University</em> <a href="/about">Read more about my research here...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:pkitlas@me.com">email</a></li>
-      
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Peter Kitlas 
+---
+<div class="blurb">
+	<h1>Peter Kitlas</h1>
+	<p>Ph.D. Candidate, Near Eastern Studies, Princeton University<a href="/research">Read more about my research...</a></p>
+</div><!-- /.blurb -->
