--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Peter Kitlas
 ---
 <div class="blurb">
 	<h1>Peter Kitlas</h1>
-	<p>Ph.D. Candidate, Near Eastern Studies, Princeton University<a href="/research"> Read more about my research...</a></p>
+	<p>Ph.D. Candidate, Near Eastern Studies, Princeton University</p>
 </div><!-- /.blurb -->
