--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan's Blog
+title: About Peter Kitlas
 ---
-	<h1>{{ page.title }}</h1>
-	<ul class="about">
-  </ul>
+	<div class="blurb">
+	<h1>Hi there!</h1>
+	<p>I am a doctoral student at Princeton University in the Department of Near Eastern Studies. I received my M.A. from the University of Michigan where I played an active role in the university’s Mediterranean Studies graduate student initiative, Meditopos. My current research focuses on the development of diplomatic culture and practices in Morocco and the Ottoman Empire during the eighteenth century. To do so, I investigate three areas of diplomatic activity: the writing of ambassadorial accounts (riḥla in Morocco and sefaretname in the Ottoman Empire); the creation and sustaining of social and political networks in which ambassadors operated; and the development of diplomatic spaces separate from the central court (Tangier in Morocco and Dubrovnik in the Ottoman Empire). Throughout the eighteenth century, these areas of diplomatic activity underwent a period of transition ending with bureaucracies that increasingly mirrored the statecraft-based, European model of diplomacy. As such my dissertation investigates two main questions. First, without assuming a trajectory toward resident embassies, do the Moroccan and Ottoman diplomatic systems help us to uncover a more diverse set of standards for measuring value and success in early modern diplomacy? Second, how can understanding Ottoman and Moroccan diplomatic culture and practices help to better highlight the complexities in the transition from humanistic to statecraft diplomatic practices occurring in Europe during the eighteenth century?</p>
+</div><!-- /.blurb -->
